fix date cutoff on some devices

--- a/src/components/top/top.module.css
+++ b/src/components/top/top.module.css
@@ -25,15 +25,18 @@
 #about {
     /* width: 100%; */
     /* line-height: 1rem; */
+    height: 30%;
     margin: 24px auto 0;
     overflow: scroll;
+    flex-shrink: 2;
 }
 
 #dates {
     text-align: center;
     font-size: 18px;
     overflow: hidden;
-    height: 50px;
+    height: 60px;
+    flex-shrink: 1;
 }
 
 #up {
